--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="100dp"
         android:scaleType="centerCrop"
         android:src="@drawable/logo" />
 
@@ -46,14 +45,31 @@
         android:layout_marginRight="20sp"
         android:text="Esqueceu sua senha?" />
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="ENTRAR" />
 
-    <Button
-        android:layout_width="200dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="SAIR" />
+        android:layout_margin="20dp"
+        android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/btnEntrar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="20dp"
+            android:text="entrar"
+            android:layout_marginRight="5dp"
+            android:textAllCaps="true" />
+
+        <Button
+            android:id="@+id/btnSair"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="20dp"
+            android:layout_marginLeft="5dp"
+            android:text="sair"
+            android:textAllCaps="true" />
+    </LinearLayout>
 </LinearLayout>
