splash e login feito

--- a/app/src/main/res/layout/splash_layout.xml
+++ b/app/src/main/res/layout/splash_layout.xml
@@ -4,24 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_vertical"
-    tools:context=".SplashActivity">
+    android:gravity="center"
+    tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/imgLogo"
+        android:id="@+id/imgSol"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_gravity="center_horizontal"
         android:scaleType="centerCrop"
-        android:src="@drawable/logo"
-        />
+        android:padding="10dp"
+        android:src="@drawable/sol"
 
-    <ProgressBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/pgbLogo"
-        android:layout_gravity="center_horizontal"
         />
 
 </LinearLayout>
