--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -7,43 +7,68 @@
     android:orientation="vertical"
     tools:context=".LoginActivity">
 
-    <ImageView
-        android:id="@+id/imgLogin"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_gravity="center_horizontal"
-        android:scaleType="centerCrop"
-        android:src="@drawable/logo" />
-
-    <EditText
-        android:id="@+id/edtEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20sp"
-        android:drawableEnd="@drawable/sharp_email"
-        android:hint="INSIRA SEU EMAIL:"
-        android:inputType="textEmailAddress"
-        android:maxLength="80"
-        android:padding="20sp" />
-
-    <EditText
-        android:id="@+id/edtSenha"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20sp"
-        android:drawableEnd="@drawable/sharp_lock"
-        android:hint="INSIRA SUA SENHA:"
-        android:inputType="textPassword"
-        android:maxLength="80"
-        android:padding="20sp" />
-
     <TextView
-        android:id="@+id/txtEsqueceuSenha"
-        android:layout_width="wrap_content"
+        android:id="@+id/txtSignin"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:layout_marginRight="20sp"
-        android:text="Esqueceu sua senha?" />
+        android:layout_gravity="start"
+        android:layout_margin="20sp"
+        android:textSize="20sp"
+        android:text="Sign in"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="20sp"
+
+        >
+
+        <TextView
+            android:id="@+id/txtUser"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:textSize="15sp"
+            android:text="UserName/email adress"
+            />
+
+        <EditText
+            android:id="@+id/edtEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:maxLength="80" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="20sp"
+
+        >
+
+        <TextView
+            android:id="@+id/txtPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:textSize="15sp"
+            android:text="Password"
+            />
+
+        <EditText
+            android:id="@+id/edtSenha"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:maxLength="80" />
+
+    </LinearLayout>
+
 
 
     <LinearLayout
@@ -56,20 +81,16 @@
             android:id="@+id/btnEntrar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="20dp"
-            android:text="entrar"
-            android:layout_marginRight="5dp"
-            android:textAllCaps="true" />
+            android:layout_weight="2"
+            android:text="Create a new account"
+            android:layout_marginRight="5dp" />
 
         <Button
             android:id="@+id/btnSair"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="20dp"
             android:layout_marginLeft="5dp"
-            android:text="sair"
-            android:textAllCaps="true" />
+            android:text="sign in" />
     </LinearLayout>
 </LinearLayout>
