--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:textSize="15sp"
-            android:text="UserName/email adress"
+            android:text="User Name/email adress"
             />
 
         <EditText
@@ -78,7 +78,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btnEntrar"
+            android:id="@+id/btnCreate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -86,7 +86,7 @@
             android:layout_marginRight="5dp" />
 
         <Button
-            android:id="@+id/btnSair"
+            android:id="@+id/btnSigin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
