--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/btnVoltar"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:src="@drawable/arrow_back" />
@@ -50,20 +51,162 @@
         android:layout_margin="20sp"
         android:drawableEnd="@drawable/search"
         android:hint="Text Field"
-        android:inputType="textEmailAddress"
+        android:inputType="text"
         android:maxLength="80" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="150dp"
-            android:layout_height="100dp"
-            android:layout_margin="20sp"
-            android:background="#EC9B9B" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white">
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+
+                <LinearLayout
+                    android:layout_width="190dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="15dp"
+                    android:background="#F16A6A" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/edtPrice"
+                        android:layout_width="180sp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15sp"
+                        android:hint="Price"
+                        android:inputType="text"
+                        android:maxLength="80" />
+
+                    <EditText
+                        android:id="@+id/edtImageID"
+                        android:layout_width="180sp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15sp"
+                        android:hint="ImageID"
+                        android:inputType="text"
+                        android:maxLength="80" />
+
+                    <TextView
+                        android:id="@+id/btnDownload"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15sp"
+                        android:layout_marginBottom="15sp"
+                        android:layout_weight="1"
+                        android:background="#EC9B9B"
+                        android:gravity="center_horizontal"
+                        android:paddingHorizontal="20dp"
+                        android:paddingVertical="15dp"
+                        android:text="Download" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:layout_margin="10dp"
+                android:background="#EC9B9B" />
+
+            <TextView
+                android:id="@+id/txtOwner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingLeft="20dp"
+                android:text="Owner:"
+                android:textSize="17sp" />
+
+            <TextView
+                android:id="@+id/txtDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingLeft="20dp"
+                android:text="Description:"
+                android:textSize="17sp" />
+
+            <TextView
+                android:id="@+id/txtLorem"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:paddingLeft="20dp"
+                android:paddingRight="30dp"
+                android:text="Lorem ipsum dolor sit amet. Aut rerum omnis cum eius provident est voluptatem ratione et totam minima qui amet architecto quo eaque nisi." />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:layout_margin="10dp"
+                android:background="#EC9B9B" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <LinearLayout
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_marginLeft="9dp"
+                    android:layout_marginRight="9dp"
+                    android:background="#F16A6A" />
+
+                <LinearLayout
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_marginLeft="9dp"
+                    android:layout_marginRight="9dp"
+                    android:background="#F16A6A" />
+
+                <LinearLayout
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_marginLeft="9dp"
+                    android:layout_marginRight="9dp"
+                    android:background="#F16A6A" />
+
+                <LinearLayout
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_marginLeft="9dp"
+                    android:layout_marginRight="9dp"
+                    android:background="#F16A6A" />
+
+                <LinearLayout
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_marginLeft="9dp"
+                    android:layout_marginRight="9dp"
+                    android:background="#F16A6A" />
+            </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
