--- a/app/src/main/res/layout/tangedco2_layout.xml
+++ b/app/src/main/res/layout/tangedco2_layout.xml
@@ -53,13 +53,13 @@
         android:layout_marginBottom="20dp"
         android:textColor="@color/white" />
 
-    <Button
+    <TextView
         android:layout_marginTop="30dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:backgroundTint="#EC3737"
-
+        android:layout_height="90dp"
+        android:gravity="center"
+        android:backgroundTint="#FF7A7A"
+        android:background="@color/black"
         android:text="Sign in"
         />
 
